--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,11 +5,12 @@
     font-size: 35px !important;
     top: 50px !important;
     left: 50px !important;
-    color: #62C1AD !important;
+    color: #287a68 !important;
+    letter-spacing: -2px;
 }
 #profile-image{
     border-radius: 50% !important;
     margin: 0px !important; 
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
