--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,23 @@ h1,h2,h3,h4,h5,h6{
     outline: none !important;
     box-shadow: none !important;
 }
+  .l-f-img {
+      width: 160px;
+  }
+@media only screen and (max-width: 576px) {
+    h1 {
+        font-size: 20px !important;
+    }
+
+    h2 {
+        font-size: 16px !important;
+    }
+
+    p {
+        font-size: 12px !important;
+    }
+    .l-f-img {
+            width: 100%;
+    }
+
+}
