--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,9 @@ h1,h2,h3,h4,h5,h6{
     h2 {
         font-size: 16px !important;
     }
-
+    h5{
+        font-size: 16px !important;
+    }
     p {
         font-size: 12px !important;
     }
