--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,9 @@ h1,h2,h3,h4,h5,h6{
     box-shadow: none !important;
 }
   .l-f-img {
-      width: 160px;
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
   }
 @media only screen and (max-width: 576px) {
     h1 {
@@ -39,7 +41,8 @@ h1,h2,h3,h4,h5,h6{
         font-size: 12px !important;
     }
     .l-f-img {
-            width: 100%;
+            width: 100px;
+            height: 100px;
     }
 
 }
