--- a/src/pages/SellStyle.css
+++ b/src/pages/SellStyle.css
@@ -19,10 +19,10 @@
   .hero div p{
     font-size: 11px;
   }
-  #itemForm label{
+   label{
     font-size: 13px;
   }
-  #itemForm input , #itemForm textarea{
+  input , textarea{
     font-size: 13px;
   }
 }
