--- a/src/pages/BuyStyle.css
+++ b/src/pages/BuyStyle.css
@@ -1,9 +1,10 @@
 .category-btn{
-    font-size: 1.1rem;
+    font-size: 1rem;
+    padding: 10px 0;
 }
-@media screen and (max-width: 576px) {
+/* @media screen and (max-width: 576px) {
     
     .category-btn{
         font-size: 0.85rem;
     }
-}
+} */
