--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -6,8 +6,9 @@
     align-items: center;
 }
 .box img{
-    height: 90%;
+    height: 250px;
     border-radius: 20px;
+    box-shadow: 0 1px 3px rgb(23 23 23 / 24%);
 }
 @media only screen and  (max-width: 1000px) {
     .box{
@@ -19,5 +20,6 @@
     }
     .box img{
         width: 300px;
+        height: auto;
     }
 }
