--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
     font-family: 'Varela Round', sans-serif;
     scroll-behavior: auto !important;
 }
-
+.hero {
+    box-shadow: 0 1px 3px rgb(23 23 23 / 24%);
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
