--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,83 @@ h1,h2,h3,h4,h5,h6{
     }
 
 }
+
+.home-card-lost{
+    opacity: 3;
+    background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('./svgs/lost.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain;
+    overflow: hidden;
+}
+
+.home-card-found{
+    opacity: 3;
+    background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('./svgs/found.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain;
+    overflow: hidden;
+}
+
+.home-card-buy{
+    opacity: 3;
+    background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('./svgs/buy.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain;
+    overflow: hidden;
+}
+
+.home-card-sell{
+    opacity: 3;
+    background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('./svgs/sell.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain;
+    overflow: hidden;
+}
+
+.button-template {
+    align-items: center;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 1.25;
+    margin: 0;
+    min-height: 3rem;
+    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+    position: relative;
+    text-decoration: none;
+    transition: all 250ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: baseline;
+    width: auto;
+  }
+
+.lost-btn{
+    background-color: rgb(238, 154, 28)
+}
+
+.found-btn{
+    background-color: rgb(101, 245, 103)
+}
+
+.buy-btn{
+    background-color: rgb(119, 119, 215)
+}
+
+.sell-btn{
+    background-color: rgb(49, 137, 232)
+}
